--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,4 +1,10 @@
+.middle {
+  display: flex;
+  justify-content: center;
+}
+
 .slide {
+  width: 100%;
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -6,22 +12,17 @@
 
 .image {
   width: 100%;
+  max-width: 200px;
   margin: 20px;
-  background-color: red;
 }
 .imageCrop {
   width: 100%;
+  max-width: 200px;
   margin: 20px;
   border-radius: 50%;
-  background-color: blue;
 }
 
 .text {
   width: 100%;
   text-align: center;
-}
-
-.middle {
-  display: flex;
-  justify-content: center;
 }
