--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -13,16 +13,17 @@
 .image {
   width: 100%;
   max-width: 200px;
-  margin: 20px;
+  margin: 10px 20px;
 }
 .imageCrop {
   width: 100%;
-  max-width: 200px;
-  margin: 20px;
+  max-width: max(min(17vw, 170px), 100px);
+  margin: 10px 20px;
   border-radius: 50%;
 }
 
 .text {
   width: 100%;
   text-align: center;
+  font-size: var(--S);
 }
