--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,3 +1,4 @@
+/* Horizontal Slider */
 .middle {
   display: flex;
   justify-content: center;
@@ -26,4 +27,38 @@
   width: 100%;
   text-align: center;
   font-size: var(--S);
+}
+
+/* Vertical Slider */
+
+.verticalSlide {
+  width: 100%;
+  height: 100%;
+  margin: 0px 0px;
+  display: flex;
+  color: red;
+  background-color: var(--lightergrey);
+  box-shadow: var(--extraglow);
+}
+
+.verticalImg {
+  margin: 10px 5px 10px 10px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: var(--shortglow);
+}
+
+.verticalTextCont {
+  width: 100%;
+  margin: 10px 10px 10px 5px;
+  background-color: var(--almostwhite);
+  border-radius: 8px;
+  box-shadow: var(--shortglow);
+}
+
+.verticalTitle {
+  font-size: var(--M);
+  font-weight: bold;
+  margin: 5px 15px;
+  color: var(--darkgrey);
 }
