--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,14 @@
 :root {
-  --theme-color: #52b3d0;
+  /* Responsive Colors */
+  --black: #000;
+  --darkergrey: #333;
+  --darkgrey: #555;
+  --mediumgrey: #777;
+  --grey: #999;
+  --lightgrey: #ddd;
+  --lightergrey: #eee;
+  --almostwhite: #f9f9f9;
+  --white: #fff;
 
   /* Responsive text sizes */
   --XXXXL: max(min(3vw, 4rem), 2.5rem);
@@ -10,4 +19,16 @@
   --M: max(min(1.7vw, 1.5rem), 1rem);
   --S: max(min(1.8vw, 1.2rem), 0.85rem);
   --XS: max(min(1vw, 1rem), 0.8rem);
+
+  /* Effects */
+
+  --glow: 0 0 7px 3px rgba(0, 0, 0, 0.2);
+
+  --shortglow: 0 0 2px 2px rgba(0, 0, 0, 0.05);
+  --extraglow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
+
+  --topglow: 0 -10px 10px -10px rgba(0, 0, 0, 0.2);
+  --bottomglow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
+  --topandbottomglow: 0 -10px 10px -10px rgba(0, 0, 0, 0.1),
+    0 10px 10px -10px rgba(0, 0, 0, 0.1);
 }
