--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -65,3 +65,9 @@
   margin: 5px 15px;
   color: var(--darkgrey);
 }
+
+/* test */
+.verticalTest {
+  height: 100px;
+  background-color: var(--darkgrey);
+}
