--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -68,8 +68,9 @@
 
 /* test */
 .verticalTest {
-height: 100%;
+  height: 100%;
   width: 100%;
+  display:  flex;
   background-color: var(--darkgrey);
 }
 
