stolen code from other repo of mine

--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -73,4 +73,8 @@
   display:  flex;
   background-color: var(--darkgrey);
 }
+.verticalSlide {
+  text-align: center;
+  min-width: fit-content;
+}
 
