--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,80 +1,19 @@
-/* Horizontal Slider */
-.middle {
+.root {
   display: flex;
-  justify-content: center;
+  max-height: fit-content;
+  //padding-bottom: 10px;
+  background-color: #367;
 }
 
 .slide {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.image {
-  width: 100%;
-  max-width: 200px;
-  margin: 10px 20px;
-}
-.imageCrop {
-  width: 100%;
-  max-width: max(min(17vw, 170px), 100px);
-  margin: 10px 20px;
-  border-radius: 50%;
-}
-
-.text {
-  width: 100%;
-  text-align: center;
-  font-size: var(--S);
-}
-
-/* Vertical Slider */
-
-.verticalCont {
-  max-height: max(min(30vw, 600px), 190px);
-}
-
-.verticalSlide {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  background-color: var(--lightergrey);
-  box-shadow: var(--extraglow);
-}
-
-.verticalImg {
-  margin: 10px 5px 10px 10px;
-  width: auto;
-  height: auto;
-  border-radius: 8px;
-  box-shadow: var(--shortglow);
-}
-
-.verticalTextCont {
-  width: 100%;
-  margin: 10px 10px 10px 5px;
-  background-color: var(--almostwhite);
-  border-radius: 8px;
-  box-shadow: var(--shortglow);
-}
-
-.verticalTitle {
-  font-size: var(--M);
-  font-weight: bold;
-  margin: 5px 15px;
-  color: var(--darkgrey);
-}
-
-/* test */
-.verticalTest {
-  height: 100%;
-  width: 100%;
-  display:  flex;
-  background-color: var(--darkgrey);
-}
-.verticalSlide {
   text-align: center;
   min-width: fit-content;
 }
 
+.img {
+  border-radius: 12px;
+}
+
+.navigationWrapper {
+  position: relative;
+}
