--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,6 +1,7 @@
 .root {
-  display: flex;
   max-height: fit-content;
+  width: 100%;
+  display: flex;
   //padding-bottom: 10px;
   background-color: #367;
 }
