--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,5 +1,6 @@
 .root {
   width: 100%;
+  height: 100%;
   display: flex;
   //padding-bottom: 10px;
   background-color: #367;
@@ -7,16 +8,19 @@
 
 .slide {
   width: 100%;
+  height: 100%;
   text-align: center;
   min-width: fit-content;
 }
 
 .img {
   width: 100%;
+  height: 100%;
   border-radius: 12px;
 }
 
 .navigationWrapper {
   width: 100%;
+  height: 100%;
   position: relative;
 }
