--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -1,26 +1,20 @@
 .root {
-  width: 100%;
-  height: 100%;
   display: flex;
   //padding-bottom: 10px;
   background-color: #367;
 }
 
 .slide {
-  width: 100%;
-  height: 100%;
   text-align: center;
   min-width: fit-content;
+  background-color: #567;
 }
 
 .img {
-  width: 100%;
-  height: 100%;
   border-radius: 12px;
 }
 
 .navigationWrapper {
-  width: 100%;
-  height: 100%;
   position: relative;
+  background-color: #a67;
 }
