--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -25,8 +25,7 @@
   margin: 10px 20px;
 }
 .imageCrop {
-  width: 100%;
-  max-width: max(min(10vw, 170px), 100px);
+  width: max(min(10vw, 170px), 100px);
   margin: 10px 20px;
   border-radius: 50%;
 }
