--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -44,7 +44,7 @@
   max-height: max(min(30vw, 600px), 190px);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 400px) {
   .verticalSlide {
     width: 100%;
     height: 100%;
@@ -69,9 +69,22 @@
     box-shadow: var(--shortglow);
     transition: 0.3s;
   }
+  .verticalTitle {
+    font-size: var(--ES);
+    font-weight: bold;
+    margin: 0px max(min(4vw, 80px), 25px);
+    color: var(--darkgrey);
+  }
+
+  .verticalDesc {
+    text-align: justify;
+    font-size: var(--EXXS);
+    margin: max(min(1vw, 30px), 0px) max(min(4vw, 80px), 25px);
+    color: var(--darkgrey);
+  }
 }
 
-@media (min-width: 600px) {
+@media (min-width: 400px) {
   .verticalSlide {
     width: 100%;
     height: 100%;
@@ -96,6 +109,19 @@
     box-shadow: var(--shortglow);
     transition: 0.3s;
   }
+  .verticalTitle {
+    font-size: var(--EM);
+    font-weight: bold;
+    margin: 0px max(min(4vw, 80px), 25px);
+    color: var(--darkgrey);
+  }
+
+  .verticalDesc {
+    text-align: justify;
+    font-size: var(--EXS);
+    margin: max(min(1vw, 30px), 0px) max(min(4vw, 80px), 25px);
+    color: var(--darkgrey);
+  }
 }
 
 .verticalCenter {
@@ -105,18 +131,4 @@
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-}
-
-.verticalTitle {
-  font-size: var(--EM);
-  font-weight: bold;
-  margin: 0px max(min(4vw, 80px), 25px);
-  color: var(--darkgrey);
-}
-
-.verticalDesc {
-  text-align: justify;
-  font-size: var(--EXS);
-  margin: max(min(1vw, 30px), 0px) max(min(4vw, 80px), 25px);
-  color: var(--darkgrey);
 }
