--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -24,17 +24,23 @@
   max-width: 200px;
   margin: 10px 20px;
 }
-.imageCrop {
-  width: max(min(10vw, 170px), 100px);
-  height: auto;
-  margin: 10px 20px;
-  border-radius: 50%;
-}
 
 .text {
   width: 100%;
   text-align: center;
   font-size: var(--S);
+}
+/* Profile Slider */
+.profileSlide {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+.imageCrop {
+  max-height: max(min(10vw, 170px), 100px);
+  margin: 10px 20px;
+  border-radius: 50%;
 }
 
 /* Vertical Slider */
