--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,4 @@
 /* Global */
-
 .globalContainer {
   width: 100%;
   max-width: 2100px;
@@ -15,12 +14,28 @@
   justify-content: center;
 }
 
-/* Text */
-.bigTitle {
-  @apply text-XL font-bold;
+/* Landing Page*/
+.landingContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 400px;
 }
-/* Sliders */
+.landingText {
+  width: 100%;
+  display: flex;
+  font-size: var(--XXXXL);
+  font-weight: 700;
+  margin: 100px;
+}
 
+.typewriter {
+  font-weight: 500;
+  color: var(--darkergrey);
+}
+
+/* Sliders */
 .crop {
   width: 50%;
   display: flex;
