--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,19 +20,26 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 400px;
+  height: max(min(27vw, 600px), 190px);
 }
 .landingText {
   width: 100%;
   display: flex;
-  font-size: var(--XXXXL);
+  font-size: var(--4XL);
   font-weight: 700;
-  margin: 100px;
+  margin: max(min(10vw, 100px), 20px);
 }
 
 .typewriter {
   font-weight: 500;
   color: var(--darkergrey);
+}
+
+/* Text */
+.title {
+  font-size: var(--L);
+  font-weight: 700;
+  margin: max(min(4vw, 80px), 30px) 0px max(min(2vw, 50px), 10px) 0px;
 }
 
 /* Sliders */
