--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,17 @@
 /* Global */
-.globalContainer {
-  width: 100%;
+.container {
+  position: relative;
   max-width: 2100px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+}
+
+.contContainer {
+  position: absolute;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  min-height: 100%;
 }
 
 .middle {
