--- a/styles/base.css
+++ b/styles/base.css
@@ -36,5 +36,5 @@
 
   --topglow: 0 -10px 10px -10px rgba(0, 0, 0, 0.2);
   --bottomglow: 0 10px 10px -10px rgba(0, 0, 0, 0.2);
-  --topandbottomglow: 0 -10px 10px -10px #eee, 0 10px 10px -10px #eee;
+  --topandbottomglow: 0 -10px 10px -10px #e8e8e8, 0 10px 10px -10px #e8e8e8;
 }
