--- a/styles/base.css
+++ b/styles/base.css
@@ -15,13 +15,14 @@
   --XXXL: max(min(2.7vw, 3rem), 2rem);
   --XXL: max(min(2.5vw, 2.5rem), 1.7rem);
   --XL: max(min(2.3vw, 2.2rem), 1.5rem);
-  --L: max(min(2.15vw, 1.8rem), 1.2rem);
-  --M: max(min(1.7vw, 1.5rem), 1rem);
-  --S: max(min(1.8vw, 1.2rem), 0.85rem);
+  --LG: max(min(2.2vw, 1.9rem), 1.1rem);
+  --L: max(min(2.2vw, 1.8rem), 0.95rem);
+  --M: max(min(1.9vw, 1.5rem), 0.9rem);
+  --S: max(min(1.7vw, 1.2rem), 0.85rem);
   --XS: max(min(1vw, 1rem), 0.8rem);
 
   /* Extra font sizes */
-  --4XL: max(min(3vw, 4rem), 1.8rem);
+  --4XL: max(min(3.5vw, 4rem), 1.4rem);
   --EM: max(min(2.5vw, 2.2rem), 1rem);
   --ES: max(min(2.2vw, 2rem), 0.8rem);
   --EXS: max(min(1.5vw, 1.8rem), 0.7rem);
