--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -19,8 +19,15 @@
   height: 100%;
   display: flex;
   justify-content: center;
+  animation: fadeIn 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
 }
 
+.hidden {
+  display: none;
+}
 /* Landing Page*/
 .landingContainer {
   display: flex;
@@ -28,6 +35,10 @@
   align-items: center;
   width: 100%;
   height: max(min(30vw, 550px), 100px);
+  animation: fadeIn 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
 }
 .landingText {
   width: 100%;
@@ -44,9 +55,10 @@
 
 /* Text */
 .title {
+  text-align: center;
   font-size: var(--L);
   font-weight: 700;
-  margin: max(min(4vw, 80px), 30px) 0px max(min(2vw, 50px), 10px) 0px;
+  margin: max(min(8vw, 90px), 30px) 0px max(min(2vw, 30px), 10px) 0px;
 }
 
 /* Sliders */
@@ -88,4 +100,21 @@
 
 .verticalGlow {
   box-shadow: var(--topandbottomglow);
+  animation: fadeIn 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
+}
+
+/* Animation */
+@keyframes fadeIn {
+  from {
+    opacity: 0%;
+    padding-top: 30px;
+  }
+
+  to {
+    opacity: 100%;
+    padding-top: 0px;
+  }
 }
