--- a/components/threejs/canvas.module.css
+++ b/components/threejs/canvas.module.css
@@ -48,3 +48,11 @@
     margin-top: 0px;
   }
 }
+
+.vanta {
+  position: absolute;
+  top: 0;
+  z-index: 0;
+  height: max(min(30vw, 550px), 100px);
+  width: 100%;
+}
