--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -48,7 +48,7 @@
 .verticalCont {
   width: 100%;
   max-height: max(min(30vw, 600px), 190px);
-  background-color: var(--lightergrey);
+  background-color: var(--white);
 }
 
 @media (max-width: 400px) {
