--- a/components/threejs/canvas.module.css
+++ b/components/threejs/canvas.module.css
@@ -10,27 +10,23 @@
 
 @media (max-width: 700px) {
   .bg3 {
-    position: absolute;
+    position: fixed;
     top: 0;
-    z-index: 99;
+    z-index: 0;
     height: 100%;
     width: 100%;
     background-color: green;
-    opacity: 50%; /* 0%  */
+    opacity: 0%; /* 0%  */
   }
 }
 @media (min-width: 700px) {
   .bg3 {
-    background-color: yellow; /* none  */
-    opacity: 50%; /* none  */
-    display: block; /* none  */
+    display: none; /* none  */
   }
 }
 
 .bg4 {
-  background-color: blue; /* none  */
-  opacity: 50%; /* none  */
-  display: block; /* none  */
+  display: none; /* none  */
 }
 
 .bg5 {
@@ -40,8 +36,8 @@
   z-index: 98;
   height: 100%;
   width: 100%;
-  background-color: red; /*white  */
-  opacity: 50%; /* 100%  */
+  background-color: white; /*white  */
+  opacity: 100%; /* 100%  */
 }
 
 @keyframes example {
