--- a/components/threejs/canvas.module.css
+++ b/components/threejs/canvas.module.css
@@ -16,6 +16,8 @@
     height: 100%;
     width: 100%;
     background-color: green;
+    animation: onLoad 1s;
+    animation-delay: 2s;
     opacity: 0%; /* 0%  */
   }
 }
@@ -46,5 +48,14 @@
   }
   to {
     margin-top: 0px;
+  }
+}
+
+@keyframes onLoad {
+  from {
+    background-color: green;
+  }
+  to {
+    background-color: yellow;
   }
 }
