--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -15,8 +15,10 @@
 }
 
 .middle {
+  position: relative;
   width: 100%;
   height: 100%;
+  opacity: 100%;
   display: flex;
   justify-content: center;
   animation: fadeIn 1s;
@@ -59,9 +61,16 @@
 
 /* Text */
 .title {
+  position: relative;
   text-align: center;
   font-size: var(--L);
   font-weight: 700;
+  margin: max(min(8vw, 90px), 30px) 0px max(min(2vw, 30px), 10px) 0px;
+}
+
+.desc {
+  text-align: center;
+  font-size: var(--M);
   margin: max(min(8vw, 90px), 30px) 0px max(min(2vw, 30px), 10px) 0px;
 }
 
@@ -69,25 +78,56 @@
 @media (max-width: 1000px) {
   .crop {
     width: 62%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
     transition: 0.5s;
+  }
+  .canvasDesc {
+    width: 90%;
+    text-align: center;
+    font-size: var(--M);
+    position: absolute;
+    top: -30px;
+    background-color: var(--white);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 @media (min-width: 1000px) {
   .crop {
     width: 55%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
     transition: 0.5s;
+  }
+  .canvasDesc {
+    text-align: center;
+    font-size: var(--M);
+    position: absolute;
+    top: -50px;
+    background-color: var(--white);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 @media (min-width: 1500px) {
   .crop {
     width: 50%;
+    margin-left: auto;
+    margin-right: auto;
     display: flex;
     justify-content: center;
     transition: 0.5s;
+  }
+  .canvasDesc {
+    text-align: center;
+    font-size: var(--M);
+    position: absolute;
+    top: -80px;
+    background-color: var(--white);
+    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 
