--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -40,9 +40,9 @@
 }
 .imageCrop {
   height: auto;
-  width: 100%;
-  max-height: max(min(10vw, 170px), 100px);
-  max-width: max(min(10vw, 170px), 100px);
+  height: 100%;
+  max-height: max(min(10vw, 170px), 80px);
+  max-width: max(min(10vw, 170px), 80px);
   margin: 10px 20px;
   border-radius: 50%;
   cursor: pointer;
@@ -64,7 +64,9 @@
 .modalImg {
   position: relative;
   z-index: 2;
+  width: 100%;
   height: 60%;
+  min-height: 45px;
   border-radius: 8px;
 }
 
