--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -41,8 +41,8 @@
 .imageCrop {
   height: auto;
   height: 100%;
-  max-height: max(min(10vw, 170px), 80px);
-  max-width: max(min(10vw, 170px), 80px);
+  max-height: max(min(13vw, 170px), 80px);
+  max-width: max(min(13vw, 170px), 80px);
   margin: 10px 20px;
   border-radius: 50%;
   cursor: pointer;
@@ -54,19 +54,21 @@
   justify-content: space-around;
   align-items: center;
   padding: 20px;
-  width: max(min(25vw, 340px), 200px);
+  width: max(min(27vw, 340px), 200px);
   height: 95%;
   background-color: var(--white);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+  z-index: 2;
 }
 
 .modalImg {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   width: 100%;
   height: 60%;
-  min-height: 45px;
+  min-height: 30px;
+  min-width: 30px;
   border-radius: 8px;
 }
 
