--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -46,6 +46,7 @@
   margin: 10px 20px;
   border-radius: 50%;
   cursor: pointer;
+  z-index: 0;
 }
 
 .profileModal {
@@ -59,16 +60,16 @@
   background-color: var(--white);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  z-index: 2;
+  z-index: 99;
 }
 
 .modalImg {
   position: relative;
-  z-index: 3;
-  width: 100%;
-  height: 60%;
-  min-height: 30px;
-  min-width: 30px;
+  z-index: 99;
+  width: auto;
+  height: 100%;
+  min-height: 20px;
+  min-width: 20px;
   border-radius: 8px;
 }
 
@@ -77,7 +78,7 @@
 }
 
 .url {
-  height: 100%;
+  height: 60%;
   width: fit-content;
   display: flex;
   align-items: center;
