--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -39,6 +39,7 @@
   flex-wrap: wrap;
 }
 .imageCrop {
+  position: relative;
   height: auto;
   height: 100%;
   max-height: max(min(13vw, 170px), 80px);
@@ -46,7 +47,6 @@
   margin: 10px 20px;
   border-radius: 50%;
   cursor: pointer;
-  z-index: 0;
 }
 
 .profileModal {
@@ -60,12 +60,20 @@
   background-color: var(--white);
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
   border-radius: 10px;
-  z-index: 99;
+}
+
+.bgModal {
+  position: absolute;
+  padding: 10000px;
+  opacity: 10%;
+  width: max(min(27vw, 340px), 200px);
+  height: 95%;
+  background-color: red;
+  border-radius: 10px;
 }
 
 .modalImg {
   position: relative;
-  z-index: 99;
   width: auto;
   height: 100%;
   min-height: 20px;
@@ -81,6 +89,7 @@
   height: 60%;
   width: fit-content;
   display: flex;
+  justify-content: space-around;
   align-items: center;
   cursor: pointer;
 }
