--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -73,6 +73,7 @@
 }
 
 .modalImg {
+  animation: onLoad 1s;
   position: relative;
   width: auto;
   height: 100%;
@@ -82,7 +83,8 @@
 }
 
 .hidden {
-  display: none;
+  display: block;
+  animation: onLoad 1s;
 }
 
 .url {
@@ -202,4 +204,13 @@
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+@keyframes onLoad {
+  from {
+    font-strerch: normal;
+  }
+  to {
+    font-strerch: normal;
+  }
 }
