--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,6 +27,35 @@
   animation-timing-function: ease-in-out;
 }
 
+@media (max-width: 1000px) {
+  .delayedMiddle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 100%;
+    display: flex;
+    justify-content: center;
+    animation: fadeIn 1s;
+    animation-delay: 2s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+  }
+}
+@media (min-width: 1000px) {
+  .delayedMiddle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 100%;
+    display: flex;
+    justify-content: center;
+    animation: fadeIn 1s;
+    animation-delay: 0.2s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+  }
+}
+
 .hidden {
   display: none;
 }
@@ -77,7 +106,7 @@
 /* Sliders */
 @media (max-width: 1000px) {
   .crop {
-    width: 60%;
+    width: 65%;
     margin-left: auto;
     margin-right: auto;
     display: flex;
@@ -87,15 +116,6 @@
 }
 
 @media (max-width: 1000px) {
-  .canvasDesc {
-    width: 90%;
-    text-align: center;
-    font-size: var(--M);
-    position: absolute;
-    top: -30px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
-  }
   .canvasDesc {
     width: 90%;
     text-align: center;
