--- a/components/slider/slider.module.css
+++ b/components/slider/slider.module.css
@@ -38,15 +38,29 @@
   justify-content: center;
   flex-wrap: wrap;
 }
-.imageCrop {
-  position: relative;
-  height: auto;
-  height: 100%;
-  max-height: max(min(13vw, 170px), 65px);
-  max-width: max(min(13vw, 170px), 65px);
-  margin: 10px 20px;
-  border-radius: 50%;
-  cursor: pointer;
+@media (max-width: 400px) {
+  .imageCrop {
+    position: relative;
+    height: auto;
+    height: 100%;
+    max-height: max(min(13vw, 170px), 50px);
+    max-width: max(min(13vw, 170px), 50px);
+    margin: 10px 20px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
+}
+@media (min-width: 400px) {
+  .imageCrop {
+    position: relative;
+    height: auto;
+    height: 100%;
+    max-height: max(min(13vw, 170px), 65px);
+    max-width: max(min(13vw, 170px), 65px);
+    margin: 10px 20px;
+    border-radius: 50%;
+    cursor: pointer;
+  }
 }
 
 .profileModal {
@@ -149,6 +163,31 @@
     margin: 0px max(min(4vw, 80px), 25px);
     color: var(--darkgrey);
     text-decoration: none;
+  }
+  .verticalDesc {
+    text-align: justify;
+    font-size: var(--EXS);
+    margin: max(min(1vw, 30px), 0px) max(min(4vw, 80px), 25px);
+    color: var(--darkgrey);
+  }
+}
+
+@media (max-width: 500px) {
+  .verticalImg {
+    width: 35%;
+    object-fit: cover;
+    margin: max(min(1vw, 20px), 10px) max(min(1vw, 20px), 10px);
+    border-radius: 8px;
+    box-shadow: var(--shortglow);
+  }
+  .verticalTextCont {
+    width: 65%;
+    margin: max(min(1vw, 20px), 10px) max(min(1vw, 20px), 10px)
+      max(min(1vw, 20px), 10px) 0px;
+    background-color: var(--almostwhite);
+    border-radius: 8px;
+    box-shadow: var(--shortglow);
+    transition: 0.3s;
   }
 }
 
