--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,6 +28,10 @@
   animation-timing-function: ease-in-out;
 }
 
+.padding {
+  padding: 30px;
+}
+
 @media (max-width: 1000px) {
   .delayedMiddle {
     position: relative;
@@ -40,6 +44,10 @@
     animation-delay: 2s;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
+  }
+
+  .marginTop {
+    margin-top: -25px;
   }
 }
 @media (min-width: 1000px) {
@@ -55,6 +63,10 @@
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
   }
+
+  .marginTop {
+    margin-top: -60px;
+  }
 }
 
 .hidden {
@@ -62,6 +74,7 @@
 }
 
 /* Landing Page*/
+
 .landingContainer {
   position: relative;
   display: flex;
@@ -95,7 +108,7 @@
   text-align: center;
   font-size: var(--L);
   font-weight: 700;
-  margin: max(min(8vw, 90px), 30px) 0px max(min(2vw, 30px), 10px) 0px;
+  margin: max(min(5vw, 90px), 10px) 0px max(min(2vw, 30px), 10px) 0px;
 }
 
 .desc {
@@ -105,6 +118,7 @@
 }
 
 /* Sliders */
+
 @media (max-width: 500px) {
   .crop {
     width: 75%;
@@ -112,7 +126,7 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    transition: 0.5s;
+    transition: 0.2s;
   }
   .canvasDesc {
     width: 90%;
@@ -120,8 +134,6 @@
     font-size: var(--M);
     position: absolute;
     top: -30px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 @media (min-width: 500px) {
@@ -131,16 +143,14 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    transition: 0.5s;
+    transition: 0.2s;
   }
   .canvasDesc {
     width: 90%;
     text-align: center;
     font-size: var(--M);
     position: absolute;
-    top: -30px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
+    top: -35px;
   }
 }
 
@@ -151,15 +161,13 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    transition: 0.5s;
+    transition: 0.2s;
   }
   .canvasDesc {
     text-align: center;
     font-size: var(--M);
     position: absolute;
     top: -50px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 @media (min-width: 1500px) {
@@ -169,15 +177,13 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    transition: 0.5s;
+    transition: 0.2s;
   }
   .canvasDesc {
     text-align: center;
     font-size: var(--M);
     position: absolute;
     top: -80px;
-    background-color: var(--white);
-    box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.9);
   }
 }
 
@@ -210,5 +216,53 @@
   to {
     opacity: 100%;
     padding-top: 0px;
+  }
+}
+
+/* Image Hero */
+.imgHeroCont {
+  animation: fadeIn 1s;
+  animation-delay: 0.2s;
+  animation-fill-mode: both;
+  animation-timing-function: ease-in-out;
+  margin-top: max(min(5vw, 60px), 20px);
+}
+
+.extraCont {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  height: max(min(20vw, 400px), 120px);
+}
+.verticalCenter {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.heroTitle {
+  width: 100%;
+  position: relative;
+  text-align: center;
+  font-size: var(--M);
+  font-weight: 700;
+  color: var(--darkgrey);
+  padding-bottom: max(min(2vw, 20px), 10px);
+}
+.heroDesc {
+  width: 100%;
+  position: relative;
+  text-align: center;
+  font-size: var(--EXXSM);
+  font-weight: 500;
+  color: var(--mediumgrey);
+  padding-bottom: max(min(2vw, 40px), 20px);
+}
+
+.heroImg {
+  @media (max-width: 1000px) {
+    padding: max(min(1vw, 50px), 0px);
+  }
+  @media (min-width: 1000px) {
+    padding: max(min(3vw, 50px), 0px);
   }
 }
