--- a/styles/base.css
+++ b/styles/base.css
@@ -7,6 +7,7 @@
   --grey: #999;
   --lightgrey: #ddd;
   --lightergrey: #eee;
+  --lightestgrey: #f6f6f6;
   --almostwhite: #f9f9f9;
   --white: #fff;
 
@@ -34,6 +35,7 @@
   --ES: max(min(2.2vw, 2rem), 0.8rem);
   --ESM: max(min(2vw, 2rem), 0.75rem);
   --EXS: max(min(1.5vw, 1.8rem), 0.7rem);
+  --EXXSM: max(min(1.5vw, 1.4rem), 0.7rem);
   --EXXS: max(min(1.2vw, 1.3rem), 0.55rem);
 
   /* Effects */
@@ -41,6 +43,7 @@
   --glow: 0 0 7px 3px rgba(0, 0, 0, 0.2);
 
   --shortglow: 0 0 2px 2px rgba(0, 0, 0, 0.05);
+  --shorterglow: 0 0 1px 1px rgba(0, 0, 0, 0.06);
   --extraglow: 0 0 10px 5px rgba(0, 0, 0, 0.2);
 
   --topglow: 0 -10px 10px -10px rgba(0, 0, 0, 0.2);
