--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -40,7 +40,7 @@
   padding: 30px;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 500px) {
   .delayedMiddle {
     position: relative;
     width: 100%;
@@ -52,6 +52,26 @@
     animation-delay: 2s;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
+    padding-bottom: 15px;
+  }
+  .marginTop {
+    margin-top: -10px;
+  }
+}
+
+@media (min-width: 500px) {
+  .delayedMiddle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 100%;
+    display: flex;
+    justify-content: center;
+    animation: fadeIn 1s;
+    animation-delay: 2s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+    padding-bottom: 15px;
   }
 
   .marginTop {
@@ -70,6 +90,7 @@
     animation-delay: 0.2s;
     animation-fill-mode: both;
     animation-timing-function: ease-in-out;
+    padding-bottom: 25px;
   }
 
   .marginTop {
@@ -141,7 +162,7 @@
     text-align: center;
     font-size: var(--M);
     position: absolute;
-    top: -30px;
+    top: -20px;
     color: var(--darkgrey);
   }
 }
