--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,7 +2,7 @@
 .container {
   position: relative;
   min-width: 320px;
-  max-width: 2100px;
+  max-width: 2560px;
   width: 100%;
 }
 
@@ -92,7 +92,25 @@
     animation-timing-function: ease-in-out;
     padding-bottom: 25px;
   }
+  .marginTop {
+    margin-top: -60px;
+  }
+}
 
+@media (min-width: 2000px) {
+  .delayedMiddle {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    opacity: 100%;
+    display: flex;
+    justify-content: center;
+    animation: fadeIn 1s;
+    animation-delay: 0.2s;
+    animation-fill-mode: both;
+    animation-timing-function: ease-in-out;
+    padding-bottom: 65px;
+  }
   .marginTop {
     margin-top: -60px;
   }
@@ -137,7 +155,7 @@
   text-align: center;
   font-size: var(--L);
   font-weight: 700;
-  margin: max(min(5vw, 90px), 10px) 0px max(min(2vw, 30px), 10px) 0px;
+  margin: max(min(5vw, 110px), 10px) 0px max(min(2vw, 30px), 10px) 0px;
 }
 
 .desc {
@@ -210,6 +228,7 @@
     display: flex;
     justify-content: center;
     transition: 0.2s;
+    padding-bottom: 40px;
   }
   .canvasDesc {
     text-align: center;
@@ -272,7 +291,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  height: max(min(20vw, 400px), 120px);
+  height: max(min(25vw, 400px), 150px);
 }
 .verticalCenter {
   display: flex;
